# University

./: .gitignore  README.md  build.gradle  settings.gradle
Semester 1/ASC/: Tema_lab4.asm  Tema_lab4.lst  asclab6.txt  backup.txt  exercitiu2_b_tema.lst  exercitiul1_tema1_asm.asm  exercitiul1_tema2.asm  exercitiul1b_tema2.lst  exercitiul2_tema1_asm.asm  exercitiul2a_tema2.lst  exercitiul2b_tema2.asm  exercitiul3_a_tema.asm  exercitiul3_a_tema.lst  exercitiul3_b_tema.asm  exercitiul3_b_tema.lst  fisier_problema.txt  lab4_tema.txt  lab7.asm  lab8.asm  lab8.lst  lab8_2.asm  lab8_2.lst  new 1.asm  new 1.lst  new_program.c  tema_lab5.lst  tema_lab6.asm
Semester 1/FP/: domain.py  domain.txt  main.py  pycharm.txt  python.py  repo film.txt  repository.py  script.py
Semester 2/Geometrie/: README.md
Semester 2/Grafuri/: Curs-09-extra0.pdf:Zone.Identifier  Curs-09-extra0.pdf_Zone.Identifier  cerinta_laborator_01.txt:Zone.Identifier  cerinta_laborator_01.txt_Zone.Identifier  cerinte_lab3.pdf:Zone.Identifier  cerinte_lab3.pdf_Zone.Identifier  curs01-handouts.pdf:Zone.Identifier  curs01-handouts.pdf_Zone.Identifier  curs02-ex_bfs.pdf:Zone.Identifier  curs02-ex_bfs.pdf_Zone.Identifier  curs02-handouts.pdf:Zone.Identifier  curs02-handouts.pdf_Zone.Identifier  curs03-handouts.pdf:Zone.Identifier  curs03-handouts.pdf_Zone.Identifier  curs04-transcript.pdf:Zone.Identifier  curs04-transcript.pdf_Zone.Identifier  main.cpp.txt  seminar02-transcript.pdf:Zone.Identifier  seminar02-transcript.pdf_Zone.Identifier  seminar03-transcript.pdf:Zone.Identifier  seminar03-transcript.pdf_Zone.Identifier  solutie_test.txt  suport_lab3.pdf:Zone.Identifier  suport_lab3.pdf_Zone.Identifier
Semester 2/SDA/: Istvan-Czibula-2.png:Zone.Identifier  Istvan-Czibula-2.png_Zone.Identifier  (+5 more)
Semester 3/: .gitignore
Semester 4/: .gitignore
Semester 5/PPD/CudaProject/: CMakeLists.txt  Documentation.docx  main.cu  main.exp  main.lib  run  run_tests.ps1
Semester 5/PPD/CudaProject/convolution/: InlineCudaConvolution.cu  InlineCudaConvolution.h  InlineSequentialConvolution.cpp
Semester 5/PPD/CudaProject/results/: execution_results.csv
Semester 5/PPD/CudaProject/utils/: MatrixFileManager.cpp
Semester 5/PPD/Tema3/: CMakeLists.txt  asincrona.cpp  generate_data.cpp  scatter_gather.cpp  sequential.cpp  ssend.cpp  standard.cpp  standard_optimizat.cpp
Semester 5/PPD/Tema3/inputs/: Second_Number.txt
Semester 5/PPD/mpi_test/: CMakeLists.txt  cerinta1.cpp  cerinta1.txt  cerinta2.cpp  cerinta2.txt  cerinta2_scatter.cpp  cerinta3.cpp  cerinta3.txt  cerinta4.cpp  cerinta4.txt  cerinta5.cpp  cerinta5.txt  cerinta6.cpp  cerinta6.txt  cerinta7.cpp  cerinta7.txt  cerinta8.cpp  cerinta8.txt  demo.cpp  demo1.cpp  generate4.cpp  generate5.cpp  generate6.cpp  generate_matrix_or_vectoe.cpp  generator8.cpp  inputA.txt  inputB.txt  numbers.txt  temperaturi.txt
Semester 5/Test_lab11/: CMakeLists.txt
(+2772 files in other folders)
